task#migrate-to-postgresql MySQL→PostgreSQL移行、CORS環境変数化、Render+Supabaseデプロイ対応
Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>